Added compatibility for Guzzle ^7.2.0 version and replaces deprecated functions.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "donutdan4114/shopify",
   "description": "Shopify PHP SDK to interact with the Shopify API.",
   "require": {
-    "guzzlehttp/guzzle": "~7.0",
+    "guzzlehttp/guzzle": "^7.2.0",
     "php": ">=5.5.0"
   },
   "autoload": {
